--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
 
+pkg_check_modules(GTKMM REQUIRED gtkmm-3.0)
+include_directories(${GTKMM_INCLUDE_DIRS})
+link_directories(${GTKMM_LIBRARY_DIRS})
+
 include_directories(${GTK3_INCLUDE_DIRS})
 link_directories(${GTK3_LIBRARY_DIRS})
 add_definitions(${GTK3_CFLAGS_OTHER})
@@ -13,6 +17,13 @@ add_definitions(${GTK3_CFLAGS_OTHER})
 # Assuming your main.cpp file is in the src directory
 add_executable(${PROJECT_NAME} src/main.cpp)
 target_link_libraries(${PROJECT_NAME} ${GTK3_LIBRARIES})
+
 add_subdirectory(src)
 target_link_libraries(${PROJECT_NAME} commander)
+target_link_libraries(${PROJECT_NAME} main-activity)
+target_link_libraries(${PROJECT_NAME} spotify-activity)
+# target_link_libraries(${PROJECT_NAME} activity)
+
+
+target_link_libraries(${PROJECT_NAME} ${GTKMM_LIBRARIES})
 
